--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,70 +7,99 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Campo para "To" -->
+
+    <TextView
+        android:id="@+id/emailFormTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="@string/email_form_title"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/toLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintMarginStart="16dp"
-        app:layout_constraintMarginTop="16dp" />
+        android:text="@string/to_label"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/emailTo"
+        app:layout_constraintEnd_toEndOf="@+id/subjectLabel"
+        app:layout_constraintStart_toStartOf="@+id/subjectLabel"
+        app:layout_constraintTop_toTopOf="@+id/emailTo" />
 
     <EditText
         android:id="@+id/emailTo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter email"
-        app:layout_constraintStart_toEndOf="@id/toLabel"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:autofillHints="emailAddress"
+        android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"/>
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/emailSubject"
+        app:layout_constraintTop_toBottomOf="@+id/emailFormTitle" />
 
+    <!-- Campo para "Subject" -->
     <TextView
         android:id="@+id/subjectLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subject"
-        app:layout_constraintTop_toBottomOf="@id/toLabel"
+        android:layout_marginStart="8dp"
+        android:text="@string/subject_label"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/emailSubject"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintMarginStart="16dp"
-        app:layout_constraintMarginTop="16dp" />
+        app:layout_constraintTop_toTopOf="@+id/emailSubject" />
 
+    <!-- Campo para el mensaje -->
     <EditText
         android:id="@+id/emailSubject"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter subject"
-        app:layout_constraintStart_toEndOf="@id/subjectLabel"
-        app:layout_constraintTop_toBottomOf="@id/toLabel"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:hint="@string/subject_hint"
+        android:inputType="textCapWords"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/subjectLabel"
+        app:layout_constraintTop_toBottomOf="@+id/emailTo" />
 
+    <!-- Botón de enviar -->
     <EditText
         android:id="@+id/emailMessage"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:hint="Enter message"
-        app:layout_constraintTop_toBottomOf="@id/emailSubject"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/sendButton"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:gravity="top"
-        android:inputType="textMultiLine"/>
+        android:hint="@string/message_hint"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/sendButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailSubject" />
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send"
-        app:layout_constraintTop_toBottomOf="@id/emailMessage"
+        android:layout_marginBottom="8dp"
+        android:text="@string/send_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="16dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
