--- a/app/src/main/res/layout/activity_form_project.xml
+++ b/app/src/main/res/layout/activity_form_project.xml
@@ -11,9 +11,11 @@
 
     <TextView
         android:id="@+id/projectFormTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/form_project"
         android:textSize="24sp"
